<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3C51"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="120dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/chatty"
        android:textColor="#8E24AA"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:textColor="#93CFEC"
        android:hint="@string/username"
        android:fontFamily="serif-monospace"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:shadowRadius="10"
        android:textColorHint="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="serif-monospace"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="#93CFEC"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/editUserName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editUserName"
        app:layout_constraintTop_toBottomOf="@+id/editUserName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in"
        android:textColor="#93CFEC"
        android:textSize="25sp"
        android:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:textColor="#000"
        android:backgroundTint="#93CFEC"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColor="#E6E0E0"
        android:textColorHighlight="#FDFDFD"
        android:textColorLink="#FAFAFA"

        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="#F4EFEF"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/or"
        android:textColor="#D8358C"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with"
        android:textColor="#F1EDED"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/facebook_logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editUserName"
        app:layout_constraintEnd_toStartOf="@+id/editUserName"
        app:layout_constraintTop_toTopOf="@+id/editUserName"
        app:srcCompat="@drawable/ic_user"
        android:contentDescription="@string/username" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"
        app:layout_constraintEnd_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="@+id/editPassword"
        app:srcCompat="@drawable/ic_baseline_lock_24"
        android:contentDescription="@string/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="52dp"

        android:background="#00FFFFFF"
        android:text="@string/sign_up"
        android:textAlignment="viewStart"
        android:textColor="#93CFEC"
        android:fontFamily="serif-monospace"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="baseline"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#F1EFEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button2,textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>