<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3C51"
    tools:context=".RegisterActivity"
    >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/join_chatty"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#34BDFF"
        android:textSize="35sp"
        android:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif-monospace"
        android:padding="3dp"
        android:text="@string/and_start_chatting_with_the_world"
        android:textAlignment="center"
        android:textColor="#93CFEC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:width="300dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#93CFEC"
        android:textColorHint="#93CFEC"
        android:textColorLink="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="300dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#93CFEC"
        android:textColorHint="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/editUsername2"
        app:layout_constraintStart_toStartOf="@+id/editUsername2"
        app:layout_constraintTop_toBottomOf="@+id/editUsername2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="300dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#93CFEC"
        android:textColorHint="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="300dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#93CFEC"
        android:textColorHint="#93CFEC"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/editUsername2"
        app:layout_constraintEnd_toStartOf="@+id/editUsername2"
        app:layout_constraintTop_toTopOf="@+id/editUsername2"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:srcCompat="@drawable/ic_email"
        android:contentDescription="@string/password" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/ic_baseline_lock_24"
        android:contentDescription="@string/password" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
        app:srcCompat="@drawable/ic_baseline_lock_24"
        android:contentDescription="@string/confirm_password" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/agreement"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_my_account"
        android:textColor="#000"
        android:backgroundTint="#93CFEC"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
